panel overflow css fix

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -576,7 +576,7 @@ colorOutput-field {
 }
 
 #colorOutputs {
-  max-height: calc(100vh - var(--header-height) - 234px);
+  max-height: calc(100vh - var(--header-height) - 250px);
   overflow: scroll;
 }
 
